--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="https://mrrobot.fandom.com/wiki/Elliot_Alderson">Home</a></li>
+            <li><a href="https://mrrobot.fandom.com/wiki/Elliot_Alderson">About</a></li>
+            <li><a href="https://mrrobot.fandom.com/wiki/Elliot_Alderson">Services</a></li>
+            <li><a href="https://mrrobot.fandom.com/wiki/Elliot_Alderson">Contact</a></li>
         </ul>
     </nav>
     
