--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
     </section>
     
     <footer>
-        <p>&copy; 2023 MyPage.com</p>
+        <p>&copy; 2023 Mr.ROBOT</p>
+        <marquee style="color: red;">Dont copy this website or you'll be hacked by Elliot Alderson, JK happy visit.</marquee>
     </footer>
 </body>
 </html>
